[package]
name = "fp-evm"
version = "3.0.0-dev"
license = "Apache-2.0"
authors = ["Sankar Boro <sankar.boro@zeeve.io>"]
edition = "2018"
homepage = "https://substrate.io"
repository = "https://github.com/axia-dev/frontier/"
description = "Primitive EVM abstractions for Substrate."
documentation = "https://docs.rs/sp-evm"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-core = { version = "4.0.0-dev", git = "https://github.com/axia-dev/axia-core-mb", branch = "master", default-features = false }
sp-std = { version = "4.0.0-dev", git = "https://github.com/axia-dev/axia-core-mb", branch = "master", default-features = false }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
evm = { version = "0.30.0", default-features = false, features = ["with-codec"] }
impl-trait-for-tuples = "0.1"

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-std/std",
	"serde",
	"codec/std",
	"evm/std",
	"evm/with-serde",
]
