[package]
name = "pallet-evm-precompile-blake2"
version = "2.0.0-dev"
authors = ["Sankar Boro <sankar.boro@zeeve.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/axia-dev/frontier/"
description = "BLAKE2 precompiles for EVM pallet."

[dependencies]
sp-core = { version = "4.0.0-dev", default-features = false, git = "https://github.com/axia-dev/axia-core-mb", branch = "master" }
sp-io = { version = "4.0.0-dev", default-features = false, git = "https://github.com/axia-dev/axia-core-mb", branch = "master" }
fp-evm = { version = "3.0.0-dev", default-features = false, path = "../../../../primitives/evm" }

[dev-dependencies]
pallet-evm-test-vector-support = { version = "1.0.0-dev", path = "../../test-vector-support" }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-io/std",
	"fp-evm/std",
]
