[package]
name = "pallet-evm-precompile-curve25519"
version = "1.0.0-dev"
authors = ["Sankar Boro <sankar.boro@zeeve.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/axia-dev/frontier/"
description = "Curve25519 elliptic curve precompiles for EVM pallet."

[dependencies]
sp-core = { version = "4.0.0-dev", default-features = false, git = "https://github.com/axia-dev/axia-core-mb", branch = "master" }
sp-io = { version = "4.0.0-dev", default-features = false, git = "https://github.com/axia-dev/axia-core-mb", branch = "master" }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/axia-dev/axia-core-mb", branch = "master" }
fp-evm = { version = "3.0.0-dev", default-features = false, path = "../../../../primitives/evm" }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }

[dependencies.curve25519-dalek]
version = "4.0.0-dev"
default-features = false
features = ["u64_backend", "alloc"]

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-io/std",
	"frame-support/std",
	"fp-evm/std",
	"codec/std",
]
