[package]
name = "pallet-evm-precompile-sha3fips"
version = "2.0.0-dev"
authors = ["Sankar Boro <sankar.boro@zeeve.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/axia-dev/frontier/"
description = "SHA3 FIPS202 precompile for EVM pallet."

[dependencies]
sp-core = { version = "4.0.0-dev", default-features = false, git = "https://github.com/axia-dev/axia-core-mb", branch = "master" }
sp-io = { version = "4.0.0-dev", default-features = false, git = "https://github.com/axia-dev/axia-core-mb", branch = "master" }
fp-evm = { version = "3.0.0-dev", default-features = false, path = "../../../../primitives/evm" }
tiny-keccak = { version = "2.0", features = ["fips202"] }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-io/std",
	"fp-evm/std",
]
